# ucode_c_plus_plus_marathon

sp_00/t00/: CMakeLists.txt  helloTamriel.cpp
sp_00/t03/: castSpells.cpp
sp_00/t04/: referenceOrPointer.cpp  referenceOrPointer.h
sp_00/t05/: automaton  main.cpp
sp_00/t06/: main.cpp  meadSong.h
sp_01/t00/: CMakeLists.txt  main.cpp
sp_01/t00/src/: CMakeLists.txt  getSimpleSort.cpp  getSimpleSort.h
sp_01/t01/: CMakeLists.txt  main.cpp
sp_01/t01/src/: CMakeLists.txt  moveAlong.cpp  moveAlong.h
sp_01/t02/: CMakeLists.txt  main.cpp
sp_01/t02/src/: CMakeLists.txt  visitAll.cpp  visitAll.h
sp_01/t04/: CMakeLists.txt  main.cpp
sp_01/t04/src/: CMakeLists.txt  stdAlgoV1.cpp  stdAlgoV1.h
sp_01/t05/: CMakeLists.txt  main.cpp
sp_01/t05/src/: CMakeLists.txt  stdAlgoV2.cpp  stdAlgoV2.h
sp_02/t00/: CMakeLists.txt  main.cpp
sp_02/t00/src/: uniqueWords.cpp  uniqueWords.h
sp_02/t01/: CMakeLists.txt  main.cpp
sp_02/t01/src/: CMakeLists.txt  uniqueWords.cpp  uniqueWords2.h
sp_02/t02/: CMakeLists.txt  main.cpp
sp_02/t02/src/: CMakeLists.txt  bookSaver.cpp  bookSaver.h
sp_02/t03/: CMakeLists.txt  main.cpp
sp_02/t03/src/: CMakeLists.txt  tesLibrary.cpp  tesLibrary.h
sp_03/t00/: a.out  main.cpp  templateAddition.h  templateAddition.h.gch
sp_03/t01/: a.out  main.cpp  outputAny.h
sp_03/t02/: a.out  main.cpp  sumOfArguments.h  sumOfArguments.h.gch
sp_03/t03/: sumFileData.h
sp_03/t04/: a.out  main.cpp  outputContainer.h
sp_03/t05/: a.out  main.cpp  squareValue.h
sp_03/t06/: isPalindrome.h
sp_03/t07/: sortValues.h
sp_04/t00/utils/: CMakeLists.txt
sp_04/t01/: CMakeLists.txt
sp_04/t01/app/: CMakeLists.txt  main.cpp
sp_04/t01/app/src/: Axe.h  CMakeLists.txt  ImperialSoldier.cpp  ImperialSoldier.h  StormcloakSoldier.cpp  StormcloakSoldier.h  Sword.h
sp_04/t02/: CMakeLists.txt
sp_04/t02/app/: CMakeLists.txt  main.cpp
sp_04/t02/app/src/: CMakeLists.txt  dragonborn.cpp
sp_05/t00/app/: CMakeLists.txt  main.cpp
sp_05/t00/app/src/: draugr.cpp  draugr.h
sp_05/t01/app/: main.cpp
sp_05/t01/app/src/: CMakeLists.txt  draugr.cpp  draugr.h
sp_05/t02/: CMakeLists.txt
sp_05/t02/app/: main.cpp
sp_05/t02/app/src/: draugr.cpp  draugr.h
sp_05/t03/app/: main.cpp
sp_05/t03/app/src/: draugr.cpp  draugr.h
sp_05/t04/: CMakeLists.txt
sp_05/t04/app/: CMakeLists.txt  main.cpp
sp_05/t04/app/src/: Axe.cpp  Axe.h  ImperialSoldier.cpp  ImperialSoldier.h  Soldier.cpp  Soldier.h  StormcloakSoldier.cpp  StormcloakSoldier.h  Sword.cpp  Sword.h  Weapon.cpp  Weapon.h
sp_05/t05/: CMakeLists.txt
sp_05/t05/app/: CMakeLists.txt  main.cpp
sp_05/t05/app/src/: CMakeLists.txt  Creature.cpp  Creature.h  Human.h  Werewolf.cpp  Werewolf.h  Wolf.cpp  Wolf.h
sp_06/t00/: CMakeLists.txt
sp_06/t00/app/: CMakeLists.txt  main.cpp
sp_06/t00/app/src/Food/: ApplePie.cpp  ApplePie.h  CMakeLists.txt  FoodItem.h  FoodType.h  HoneyNut.cpp  HoneyNut.h  PoisonedFood.cpp  PoisonedFood.h  SweetRoll.cpp  SweetRoll.h
sp_06/t00/app/src/Wizard/: AbstractWizard.cpp  AbstractWizard.h  CMakeLists.txt  MightyWizard.cpp  MightyWizard.h
sp_06/t01/: CMakeLists.txt
sp_06/t01/app/: CMakeLists.txt  main.cpp
sp_06/t01/app/src/Containers/: Barrel.cpp  Barrel.h  CMakeLists.txt  Chest.cpp  Chest.h  Container.cpp  Container.h  LockpickDifficulty.h  Safe.cpp  Safe.h
sp_06/t01/app/src/Interfaces/: CMakeLists.txt  ILockable.h  IOpenable.h
sp_06/t01/app/src/Player/: CMakeLists.txt  Player.cpp  Player.h
t00/: CMakeLists.txt
t02/: walletManager.cpp  walletManager.h
t03/: castSpells.h
t05/: CMakeLists.txt  main.cpp
t06/: CMakeLists.txt  meadSong.cpp
t07/src/: inventory.h
